# Dione

./: .gitignore  AWS_BEDROCK_PLUGIN_GUIDE.md  CMakeLists.txt  CPP_MODULES_GUIDE.md  build.sh  build_bedrock_plugin.sh  build_matrix.sh  build_neural.sh  build_plugin_demo.sh  fix_aws_sdk.sh
src/hello/: hello.cpp  hello.h  main.cpp
src/matrix/: CMakeLists.txt  matrix.cpp  matrix.h  matrix_test.cpp
src/neural/: CMakeLists.txt  activation.h  dense.h  neural_test.cpp
src/plugin/: aws_bedrock_plugin.cpp  aws_bedrock_plugin.h  bedrock_client.cpp  main.cpp  math_plugin.cpp  plugin_interface.h  plugin_loader.cpp  plugin_loader.h
